# QualcommAIHackathon

./: .gitignore  FRONTEND_INTEGRATION.md  LICENSE  env.example  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  readme.md  readme_agentic_browser_qualcomm_itau.md  regras.txt  server_quick_start.py  test_llm_response.py
scripts/: init_project.py
src/: index.css  main.js  preload.js  renderer.js
src/agentic_backend/: __init__.py  npu_monitor.py  prompts.py  server.py  settings.py
src/agentic_backend/audit/: evidence.py
src/agentic_backend/embeddings/: embedding.py
src/agentic_backend/graph/: graph.py  state.py
src/agentic_backend/graph/nodes/: automations.py  chatbot.py  critic.py  form_filler.py  onboarding.py  overlay.py  reporter.py  researcher.py  supervisor.py
src/agentic_backend/llm/: engine.py
src/agentic_backend/security/: injection_guard.py  policies.py
src/agentic_backend/tools/: mcp_client.py  web_scraper.py
src/agentic_backend/utils/: ids.py  logging.py
src/agentic_backend/vectorstore/: faiss_store.py  numpy_store.py
src/mcp_server/: server.js
src/renderer/: App.jsx  main.jsx
src/renderer/agent/: agentActions.js  geminiClient.js  llmClient.js
src/renderer/components/: ContentArea.jsx  NavigationBar.jsx  TabBar.jsx
src/tools/: tools.js
