[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-browser-backend"
version = "0.1.0"
description = "Backend multi-agentes para browser agentic (LangGraph + MCP + QNN/NPU)"
authors = [{name = "Qualcomm AI Hackathon Team", email = "team@qualcomm.com"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic-settings>=2.4",
  # "langgraph>=0.2.30",  # TODO: Adicionar quando compatível
  # "langchain>=0.2.16",  # TODO: Adicionar quando compatível
  "faiss-cpu>=1.8.0.post1",
  # "onnxruntime>=1.17.0",  # TODO: Adicionar quando disponível para ARM64
  "numpy>=1.26",
  "orjson>=3.10",
  "websockets>=12.0",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "tenacity>=8.4.2",
  "rich>=13.7",
  "crawl4ai>=0.1.0",
]

[project.optional-dependencies]
qnn = [
  "onnxruntime-genai>=0.5.0"
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "httpx>=0.27.0",
  "pytest-mock>=3.12.0",
  "faker>=20.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
